create the basic layout

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BattleShips</title>
 </head>
 <body>
-    
+    <div class="header">
+        <h1>BATTLESHIPS</h1>
+    </div>
+    <div class="main">
+        <div class="boards">
+            <div class="left-panel"></div>
+            <div class="right-panel"></div>
+        </div>
+        <div class="whitespace"></div>
+    </div>
+    <div class="footer">
+        <p>Made by Faizan0994</p>
+    </div>
 </body>
 </html>
