adjust layout and add control panel divs

--- a/src/index.html
+++ b/src/index.html
@@ -3,16 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BattleShips</title>
+    <title>BattleShip</title>
 </head>
 <body>
     <div class="header">
-        <h1>BATTLESHIPS</h1>
+        <h1>BATTLESHIP</h1>
     </div>
     <div class="main">
         <div class="boards">
-            <div class="left-panel"></div>
-            <div class="right-panel"></div>
+            <div class="left-panel">
+                <div class="left-container"></div>
+                <div class="left-ctrl-panel"></div>
+            </div>
+            <div class="right-panel">
+                <div class="right-container"></div>
+                <div class="right-ctrl-panel"></div>
+            </div>
         </div>
         <div class="whitespace"></div>
     </div>
