--- a/src/index.html
+++ b/src/index.html
@@ -14,10 +14,12 @@
             <div class="left-panel">
                 <div class="left-container"></div>
                 <div class="left-ctrl-panel"></div>
+                <div class="left-label"><p>Our waters</p></div>
             </div>
             <div class="right-panel">
                 <div class="right-container"></div>
                 <div class="right-ctrl-panel"></div>
+                <div class="right-label"><p>Enemy waters</p></div>
             </div>
         </div>
         <div class="whitespace"></div>
