add popup element

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
             </div>
         </div>
         <div class="whitespace"></div>
+        <div id="popup" class="popup hidden"></div>
     </div>
     <div class="footer">
         <p>Made by Faizan0994</p>
